truncate title fix

--- a/task-manager-frontend/src/components/taskDisplayItem/taskDisplay.module.css
+++ b/task-manager-frontend/src/components/taskDisplayItem/taskDisplay.module.css
@@ -49,7 +49,8 @@
 
 .title:hover {
     overflow: visible;
-  }
+    display: flex;
+}
 
 .footer {
     display: flex;
